syntax = "proto3";

package discordgo;

import "google/protobuf/struct.proto";

option go_package = "github.com/EliasStar/BacoTell/internal/proto/discordgopb";

message ApplicationCommand {
    string id = 1;
	string application_id = 2;
	string guild_id = 3;
	string version = 4;

    uint32 type = 5;

    string name = 6;
    map<string, string> name_localizations = 7;

    optional bool default_permission = 8;
    optional int64 default_member_permissions = 9;
    optional bool dm_permission = 10;
    optional bool nsfw = 11;

    string description = 12;
    map<string, string> description_localizations = 13;

    repeated ApplicationCommandOption options = 14;
}

message ApplicationCommandOption {
    uint32 type = 1;

    string name = 2;
    map<string, string> name_localizations = 3;

    string description = 4;
    map<string, string> description_localizations = 5;

    repeated int32 channel_types = 6;
    bool required = 7;
    repeated ApplicationCommandOption options = 8;

    bool autocomplete = 9;
    repeated ApplicationCommandOptionChoice choices = 10;

    optional double min_value = 11;
    double max_value = 12;

    optional int32 min_length = 13;
    int32 max_length = 14;
}

message ApplicationCommandOptionChoice {
    string name = 1;
    map<string, string> name_localizations = 2;
    google.protobuf.Value value = 3;
}
